refactor into DuoSynth

--- a/src/components/SynthVoice.scss
+++ b/src/components/SynthVoice.scss
@@ -1,9 +1,6 @@
-.frequency-slider {
-  display: flex;
-  justify-content: center;
-}
-
-.cutoff-slider {
+.frequency-slider,
+.cutoff-slider,
+.harmonicity-slider {
   display: flex;
   justify-content: center;
 }
